--- a/css/index.css
+++ b/css/index.css
@@ -282,3 +282,43 @@ footer nav a {
 footer nav a:hover {
 	color: grey;
 }
+
+.header-content-contact {
+    margin-top: 10px;
+}
+
+.contact-form{
+    height: 600px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: 40px 0;
+}
+
+input[type=text], input[type=email], textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-top: 17px;
+    margin-bottom: 16px;
+  }
+  
+  input[type=submit] {
+	background-color:grey;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+	background-color:rgb(76, 76, 207);
+  }
+
+  textarea #subject {
+	  height: 200px;
+  }
